--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -182,6 +182,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-bluetooth-serial')
+    implementation project(':react-native-svg')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
