--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-svg": "^11.0.1",
     "react-router-native": "^5.1.2",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "toggle-switch-react-native": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
